--- a/index.html
+++ b/index.html
@@ -8,13 +8,39 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Go Trip</title>
 </head>
 
 <body>
 	<div class="wrapper">
-		<header class="header"></header>
-		<main class="main"></main>
+		<header class="header">
+			<div class="header__container">
+				<div class="header__top">
+					<nav class="nav">
+						<div class="nav__logo"><a href="#!" class="nav__logo-link">GoTrip</a></div>
+						<ul class="nav__list">
+							<li class="nav__list-item"><a href="#!" class="nav__list-link activ">Home</a></li>
+							<li class="nav__list-item"><a href="#!" class="nav__list-link">Services</a></li>
+							<li class="nav__list-item"><a href="#!" class="nav__list-link">Pricing</a></li>
+							<li class="nav__list-item"><a href="#!" class="nav__list-link">Contact</a></li>
+						</ul>
+						<ul class="nav__login">
+							<li class="nav__login-item"><a href="#!" class="nav__login-link">Sign up</a></li>
+							<li class="nav__login-item"><a href="#!" class="nav__login-link btn">Login</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="header__content">
+
+				</div>
+				<img class="header__img" src="img/header/header-img.png" alt="">
+			</div>
+			
+		</header>
+		<main class="main">
+
+		</main>
 		<footer class="footer"></footer>
 	</div>
 </body>
