--- a/index.html
+++ b/index.html
@@ -31,12 +31,22 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="header__content">
-
+				<div class="header__row">
+					<div class="header__content">
+						<div class="header__badge">explore the world</div>
+						<h1 class="header__title">Explore The Na tural Beauty Of Halmahera
+							With Us</h1>
+						<div class="header__text">
+							<p>explore the beauty of god's earth in a beautiful forest and have fun</p>
+						</div>
+						<a href="#!" class="header__btn">Explore Now</a>
+					</div>
+					<div class="header__img">
+						<img src="img/header/header-img.png" alt="">
+					</div>
 				</div>
-				<img class="header__img" src="img/header/header-img.png" alt="">
 			</div>
-			
+
 		</header>
 		<main class="main">
 
