Структура секции destinations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
 
 		</header>
 		<main class="main">
-
+			<section class="destinations">
+				<div class="container-right">
+					<div class="destinations__row">
+						<div class="destinations__content"></div>
+						<div class="destinations__slider"></div>
+					</div>					
+				</div>
+			</section>
 		</main>
 		<footer class="footer"></footer>
 	</div>
