Структура секции customers

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
+		<header class="header none">
 			<div class="header__container">
 				<div class="header__top">
 					<nav class="nav">
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 			</section> -->
-			<section class="destinations">
+			<section class="destinations none">
 				<div class="container-right">
 					<div class="destinations__row">
 						<div class="destinations__content">
@@ -106,6 +106,14 @@
 										<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
 										<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
 						</div>
+					</div>
+				</div>
+			</section>
+			<section class="customers">
+				<div class="customers__container">	
+					<div class="customers__row">
+						<div class="customers__img"></div>
+						<div class="customers__content"></div>
 					</div>
 				</div>
 			</section>
