Сверстал секцию customers

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
 		integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-		
-		<link rel="stylesheet" href="css/style.css">
+
+	<link rel="stylesheet" href="css/style.css">
 
 	<title>Go Trip</title>
 </head>
@@ -95,25 +95,46 @@
 							</div>
 							<a href="#!" class="destinations__btn btn">Exsplore Now</a>
 						</div>
-						<div class="destinations__slider slider">					
-										<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>										
-										<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
-										<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
-										<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>										
-										<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
-										<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
-										<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>										
-										<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
-										<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
+						<div class="destinations__slider slider">
+							<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img1.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img2.jpg" alt="slider item"></div>
+							<div class="slider__item"><img src="img/destinations/destinations-img3.jpg" alt="slider item"></div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<section class="customers">
-				<div class="customers__container">	
+				<div class="customers__container">
 					<div class="customers__row">
-						<div class="customers__img"></div>
-						<div class="customers__content"></div>
+						<div class="customers__img">
+							<img src="img/customers/customers-img.jpg" alt="">
+						</div>
+						<div class="customers__content">
+							<h2 class="customers__title">What do customers say about us?</h2>
+							<div class="customers__review review">
+								<div class="review__client">
+									<div class="review__client-avatar">
+										<img src="img/customers/customers-avatar.png" alt="avatar">
+									</div>
+									<div class="review__client-desc">
+										<h3 class="review__client-name">Alpanasap</h3>
+										<p class="review__client-country">Japung, Indonesia</p>
+									</div>
+								</div>
+								<div class="review__text">
+									<p>Very satisfying service makes it comfortable, a beautiful place in the world.</p>
+								</div>
+								<div class="review__rating">
+									<img src="img/customers/stars-rating.svg" alt="rating">
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -125,15 +146,15 @@
 		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
 
 	<!-- jquery -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
- 
-<!-- slick.min.js -->
-<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+
+	<!-- slick.min.js -->
+	<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 	<script src="js/main.js"></script>
 </body>
