--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="customers">
+			<section class="customers none">
 				<div class="customers__container">
 					<div class="customers__row">
 						<div class="customers__img">
@@ -135,6 +135,17 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</section>
+			<section class="cta">
+				<div class="cta__container">
+					<div class="cta__column">
+						<h2 class="cta__title"></h2>
+						<div class="cta__text">
+							<p></p>
+						</div>
+						<a href="" class="cta__button"></a>
 					</div>
 				</div>
 			</section>
