--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 			<section class="cta">
 				<div class="cta__container">
 					<div class="cta__column">
-						<h2 class="cta__title"></h2>
+						<h2 class="cta__title">Prepare Yourself And Start Exploring With Us.</h2>
 						<div class="cta__text">
-							<p></p>
+							<p>There's the best discount for you today.</p>
 						</div>
-						<a href="" class="cta__button"></a>
+						<a href="#!" class="cta__button btn">Get Started</a>
 					</div>
 				</div>
 			</section>
