Структура секции subscribe

--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
 					</div>
 				</div>
 			</section>
+			<section class="subscribe">
+				<div class="subscribe__container">
+					<div class="subscribe__column">
+						<h2 class="subscribe__title"></h2>
+						<form class="subscribe__form">
+							<input class="subscribe__input" autocomplete="off" type="email">
+							<a href="#!" class="subscribe__button btn"></a>
+						</form>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer"></footer>
 	</div>
