Сверстал секцию subscribe

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="cta">
+			<section class="cta none">
 				<div class="cta__container">
 					<div class="cta__column">
 						<h2 class="cta__title">Prepare Yourself And Start Exploring With Us.</h2>
@@ -152,10 +152,10 @@
 			<section class="subscribe">
 				<div class="subscribe__container">
 					<div class="subscribe__column">
-						<h2 class="subscribe__title"></h2>
+						<h2 class="subscribe__title">Subscribe To Our Newsletter</h2>
 						<form class="subscribe__form">
-							<input class="subscribe__input" autocomplete="off" type="email">
-							<a href="#!" class="subscribe__button btn"></a>
+							<input class="subscribe__input" autocomplete="off" type="email" placeholder="Yourmail@mail.com">
+							<a href="#!" class="subscribe__button btn">Subscribe</a>
 						</form>
 					</div>
 				</div>
