--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-		integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
-		integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
 	<link rel="stylesheet" href="css/style.css">
-
 	<title>Go Trip</title>
 </head>
 
 <body>
 	<div class="wrapper">
-		<header class="header none">
+		<header class="header">
 			<div class="header__container">
 				<div class="header__top">
 					<nav class="nav">
@@ -57,32 +49,7 @@
 
 		</header>
 		<main class="main">
-			<!-- <section class="destinations">
-				<div class="container-right">
-					<div class="destinations__row">
-						<div class="destinations__content">
-							<div class="destinations__title">
-								<span>Choice Of</span>
-								<h2>Destinations</h2>
-							</div>
-							<div class="destinations__text">
-								<p>explore the beauty of god's earth in a beautiful forest and have fun</p>
-							</div>
-							<a href="#!" class="destinations__btn btn">Exsplore Now</a>
-						</div>
-						<div class="destinations__slider">
-							<div class="slider">
-								<div class="owl-carousel">
-									<img class="slider__item" src="img/destinations/destinations-img1.jpg" alt="slider item">
-									<img class="slider__item" src="img/destinations/destinations-img2.jpg" alt="slider item">
-									<img class="slider__item" src="img/destinations/destinations-img3.jpg" alt="slider item">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
-			<section class="destinations none">
+			<section class="destinations">
 				<div class="container-right">
 					<div class="destinations__row">
 						<div class="destinations__content">
@@ -109,7 +76,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="customers none">
+			<section class="customers">
 				<div class="customers__container">
 					<div class="customers__row">
 						<div class="customers__img">
@@ -138,7 +105,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="cta none">
+			<section class="cta">
 				<div class="cta__container">
 					<div class="cta__column">
 						<h2 class="cta__title">Prepare Yourself And Start Exploring With Us.</h2>
@@ -163,14 +130,6 @@
 		</main>
 		<footer class="footer"></footer>
 	</div>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
 
 	<!-- jquery -->
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
