Сверстал секцию footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,23 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer"></footer>
+		<footer class="footer">
+			<div class="footer__container">
+				<nav class="nav nav_footer">
+					<div class="nav__logo nav__logo_footer"><a href="#!" class="nav__logo-link">GoTrip</a></div>
+					<ul class="nav__list nav__list_footer">
+						<li class="nav__list-item"><a href="#!" class="nav__list-link">Home</a></li>
+						<li class="nav__list-item"><a href="#!" class="nav__list-link">Services</a></li>
+						<li class="nav__list-item"><a href="#!" class="nav__list-link">Pricing</a></li>
+						<li class="nav__list-item"><a href="#!" class="nav__list-link">Contact</a></li>
+					</ul>
+					<ul class="nav__login nav__login_footer">
+						<li class="nav__login-item"><a href="#!" class="nav__login-link">Sign up</a></li>
+						<li class="nav__login-item"><a href="#!" class="nav__login-link nav__login-link_footer nav-btn">Login</a></li>
+					</ul>
+				</nav>
+			</div>
+		</footer>
 	</div>
 
 	<!-- jquery -->
