Адаптив блока nav

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 	<title>Go Trip</title>
 </head>
 
@@ -29,6 +30,11 @@
 							<li class="nav__login-item"><a href="#!" class="nav__login-link">Sign up</a></li>
 							<li class="nav__login-item"><a href="#!" class="nav__login-link nav-btn">Login</a></li>
 						</ul>
+						<button class="nav__toggle">
+							<div class="menu-icon-wrapper">
+								<div class="menu-icon"></div>
+							</div>
+						</button>
 					</nav>
 				</div>
 				<div class="header__row">
