Закончил адаптив секции header

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 
 		</header>
-		<main class="main">
+		<main class="main none">
 			<section class="destinations">
 				<div class="container-right">
 					<div class="destinations__row">
@@ -134,7 +134,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer none">
 			<div class="footer__container">
 				<nav class="nav nav_footer">
 					<div class="nav__logo nav__logo_footer"><a href="#!" class="nav__logo-link">GoTrip</a></div>
